<resources>
    <!-- shared -->
    <string name="app_name">ParkTech App</string>
    <string name="btnGoBackMap">⬅️</string>
    <string name="inputGoSearch">Search here</string>
    <string name="textReviewRatingPlaceholder">3.4 ★★★☆☆</string>
    <string name="textParkCoordsPlaceholder">-37.818078, 144.96681</string>
    <string name="textFeatures">Features</string>
    <string name="textParkNamePlaceholder">Placeholder Park</string>
    <string name="inputEmail">Email</string>
    <string name="inputPassword">Password</string>

    <!-- actiivty_maps -->
    <string name="title_activity_maps">MapsActivity</string> <!--Update this to follow convention-->

    <!-- activity_main -->
    <string name="btnGoAddPark">+</string>
    <string name="btnGoAuth">🙂</string>
    <string name="textReviews">Reviews</string>
    <string name="btnGoReviews">See more…</string>
    <string name="btnGoInfo">More info…</string>
    <string name="imgProfilePic">Profile picture</string>

    <!-- activity_add_park -->
    <string name="inputParkName">Park Name</string>
    <string name="textAddPark">Add New Park</string>
    <string name="getLatLong">Get Position</string>
    <string name="inputLong">Longitude</string>
    <string name="inputLat">Latitude</string>
    <string name="btnCreatePark">✓</string>
    <string name="btnClearText">ⓧ</string>

    <!-- activity_search -->
    <string name="textSearchRecent">Recent</string>
    <string name="textSearchLocations">Locations</string>
    <string name="textPinIcon">📍</string>

    <!-- activity_park_info -->
    <string name="btnShowInfo">Info</string>
    <string name="btnShowReviews">Reviews</string>
    <string name="btnGoAddReview">+</string>

    <!-- activity_add_review -->
    <string name="inputReviewScore">e.g 3.14</string>
    <string name="inputReviewText">Type review here</string>
    <string name="checkBoxPets">🦮</string>
    <string name="checkBoxBBQ">🍖</string>
    <string name="checkBoxBasketball">🏀</string>
    <string name="checkBoxSoccer">⚽</string>
    <string name="checkBoxToilets">🚾</string>
    <string name="checkBoxGym">💪</string>
    <string name="checkBoxWildlife">🦆</string>
    <string name="checkBoxDrinkingWater">🚰</string>
    <string name="checkBoxParking">🚗</string>
    <string name="checkBoxFireplace">🔥</string>

    <!-- activity_register -->
    <string name="textAddReviewTitle">Review</string>
    <string name="textCreateAccount">Create account</string>
    <string name="inputUsername">Username</string>
    <string name="btnCreateUser">Create account</string>
    <string name="btnGoLogin">Already registered?</string>

    <!-- activity_login -->
    <string name="textLogin">Login</string>
    <string name="btnLoginUser">Login</string>
    <string name="btnGoRegister">Not registered?</string>

    <!-- linear_layout_review -->
    <string name="textReviewUsernamePlaceholder">Name</string>
    <string name="textReviewFeatureIconsPlaceholder">🍖🥅🚾🦮</string>
    <string name="textReviewPlaceholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>

    <!-- linear_layout_features -->
    <string name="textFeatureIconPlaceholder">🦮</string>
    <string name="textFeatureDescriptionPlaceholder">Description</string>
    <string name="textFeatureCountPlaceholder">16</string>


</resources>